<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_first"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/my_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_my_first_application"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/my_edittext0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:text="sometext"
        android:textAlignment="center"
        android:textSize="20sp"
        android:inputType="text"
        android:importantForAutofill="no"/>
    <Button
        android:id="@+id/my_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/press_my_please"
        android:fontFamily="serif"/>
    <Button
        android:id="@+id/my_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_mode"
        android:fontFamily="serif"/>
    <Switch
        android:id="@+id/my_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/switch_me"
        android:switchPadding="10dp"
        android:layoutDirection="rtl"
        android:textColor="@color/blue"
        android:checked="false"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <CheckBox
        android:id="@+id/my_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:checked="true"
        android:text="@string/select_me"
        android:textColor="@color/red"
        android:padding="10dp"
        android:layoutDirection="ltr"
        />
    <ToggleButton
        android:id="@+id/my_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:textOn="@string/red"
        android:background="@color/blue"
        android:textOff="@string/blue"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center">

        <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>
